# lsfm

./: .env  .gitignore  .prettierrc.cjs  .prettierrc.json  Dockerfile  Taskfile.yml  components.json  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.cjs  tsconfig.json  vite.config.ts
lsfm/: app.py  config.py  download.py
proxy/: nginx.conf
public/: index.html  manifest.json
src/: App.css  App.js  App.tsx  cloudinary.ts  constants.ts  main.tsx  routeTree.gen.ts  setupProxy.js  store.ts
src/api/: index.js
src/components/: CardDeck.tsx  DigitalSouvenir.js  DigitalSouvenir.tsx  GAUtil.js  GAUtil.tsx  Image.tsx  Video.tsx
src/components/cardDeck/: CardDeck.tsx
src/components/common/: Button.tsx  GlobalNotification.tsx  Image.tsx  Video.tsx
src/components/common/notification/: ErrorNotification.tsx  ProcessingNotification.tsx
src/components/digitalSouvenir/: ActionButtons.tsx  AudioGallery.tsx  DigitalSouvenir.tsx  MiniGallery.tsx  Preview.tsx  TextGallery.tsx
src/components/digitalSouvenir/preview/: MemoMediaComponent.tsx  MemoText.tsx  Preview.tsx
src/components/ui/: alert.tsx  sonner.tsx
src/components/utils/: GAUtil.tsx
src/hooks/: store.ts
src/routes/: __root.tsx  index.lazy.tsx
src/routes/digitalsouvenir/: $member.lazy.tsx
src/store/: appSlice.ts  store.ts
src/types/: alert.ts  member.ts
web/app/: Dockerfile  package.json
